2/27/2006 Bob Rossi <bob@brasko.net>

	* annotate-two/src/commands.c: Indent.

version 0.6.0 (01/30/2006):

1/30/2006 Bob Rossi <bob@brasko.net>

	* annotate-two/src/annotate.c (handle_exited): Fix compile error.
	* annotate-two/src/commands.c 
        (commands_send_source_absolute_source_file): Ditto.
        * tgdb-base/src/tgdb.c (tgdb_process_console_command): Ditto.

1/19/2006 Bob Rossi <bob@brasko.net>

	* Makefile.in: Autogenerated.
	* annotate-two/Makefile.in: Ditto.
	* annotate-two/src/Makefile.in: Ditto.
	* gdbmi/Makefile.in: Ditto.
	* gdbmi/src/Makefile.in: Ditto.
	* tgdb-base/Makefile.in: Ditto.
	* tgdb-base/src/Makefile.in: Ditto.

1/14/2006 Bob Rossi <bob@brasko.net>

	* Makefile.in: Autogenerated.
	* annotate-two/Makefile.in: Ditto.
	* annotate-two/src/Makefile.in: Ditto.
	* gdbmi/Makefile.in: Ditto.
	* gdbmi/src/Makefile.in: Ditto.
	* tgdb-base/Makefile.in: Ditto.
	* tgdb-base/src/Makefile.in: Ditto.

12/30/2005 Bob Rossi <bob@brasko.net>

	* tgdb-base/src/driver.c (gdb_input): Update to new TGDB interface.
	* tgdb-base/src/tgdb.c (tgdb_process): Add new parameter.
	* tgdb-base/include/tgdb.h (tgdb_process): Add new parameter.

12/30/2005 Bob Rossi <bob@brasko.net>

	* tgdb-base/src/annotate.c (handle_unwanted_fields): Added function.
	(annotations): Add new entry.

12/25/2005 Bob Rossi <bob@brasko.net>

	* tgdb-base/include/tgdb.h: TGDB changed tgdb_recv_debugger_console_data 
	to gdb_process.
	* tgdb-base/src/tgdb.c: Ditto.
	* tgdb-base/src/driver.c (gdb_input): Ditto.

12/25/2005 Bob Rossi <bob@brasko.net>

	* tgdb-base/src/tgdb.c (struct tgdb): Removed
	tgdb_partially_run_command field.
	(initialize_tgdb_context): Removed init of tgdb_partially_run_command.

12/22/2005 Bob Rossi <bob@brasko.net>

	* annotate-two/include/a2-tgdb.h (annotate_commands): Renamed
	enumeration value.
	(a2_get_source_absolute_filename): Renamed to
	a2_get_source_filename_pair.
	* annotate-two/include/commands.h (COMMAND_STATE): Renamed enumeration
	value.